Fixed issues w.r.t. huffman encoding

--- a/compressor_test.html
+++ b/compressor_test.html
@@ -1,3 +1,4 @@
+<script src="freq_tables.js"></script>
 <script src="huffman.js"></script>
 <script src="encoding_context.js"></script>
 <script src="header_encoder.js"></script>
