Separated encoding and decoding from RoundTrip. This has lost some error checking which should be re-added. Fixed a bug w.r.t. huffman encoding where the wrong bits of EOS were appended to the end of the byte, causing potential data corruption. Various other fixups.

--- a/compressor_test.html
+++ b/compressor_test.html
@@ -5,16 +5,17 @@
 <script src="header_decoder.js"></script>
 
 <input id="roundTripButton" type="button" value="Round-trip" />
-
-<br />
-
+<input id="encodeButton" type="button" value="Encode" />
+<input id="decodeButton" type="button" value="Decode" />
+Is Request?<input id="isRequestCheckbox" type="checkbox" checked=true />
+Use Huffman?<input id="useHuffmanCheckbox" type="checkbox" checked=true />
 <input id="headerTableMaxSizeInput" type="number" min="0" value="4096" />
 <input id="changeHeaderTableMaxSizeButton" type="button"
        value="Change header table max size" />
 
 <br />
 
-<textarea id="uncompressed" cols="60" rows="20">
+<textarea id="encoderInput" cols="60" rows="20">
 :authority: www.google.com
 :method: GET
 :path: /
@@ -30,43 +31,35 @@ p3p:
 user-agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.32 (KHTML, like Gecko) Chrome/27.0.1425.0 Safari/537.32
 </textarea>
 
-<textarea id="uncompressed2" cols="60" rows="20">
-</textarea>
-
+<textarea id="decoderOutput" cols="60" rows="20"> </textarea>
 <!-- 70 = 16*3 + 2 + 16 + padding (For scrollbar)-->
-<textarea id="exampleOutput" cols="70" rows="20">
-</textarea>
-
+<textarea id="exampleOutput" cols="70" rows="20"> </textarea>
 <br />
 
-<textarea id="intermediate" cols="124" rows="12">
-</textarea>
-
+<textarea id="intermediate" cols="124" rows="12"> </textarea>
 <br />
 
-<textarea id="encoderContext" cols="60" rows="40">
-</textarea>
-<textarea id="decoderContext" cols="60" rows="40">
-</textarea>
-
+<textarea id="encoderContext" cols="60" rows="40"> </textarea>
+<textarea id="decoderContext" cols="60" rows="40"> </textarea>
 <br />
 
 <script>
 'use strict';
 
 var roundTripButton = document.getElementById('roundTripButton');
+ENCODE_HUFFMAN = 1; // defined in encoding_context.js
 var headerTableMaxSizeInput =
   document.getElementById('headerTableMaxSizeInput');
 var changeHeaderTableMaxSizeButton =
   document.getElementById('changeHeaderTableMaxSizeButton');
 
-var uncompressedTextarea = document.getElementById('uncompressed');
+var encoderInputTextarea = document.getElementById('encoderInput');
 var encoderContextTextarea = document.getElementById('encoderContext');
 var intermediateTextarea = document.getElementById('intermediate');
 var exampleTextarea = document.getElementById('exampleOutput');
 var compressedTextarea = document.getElementById('compressed');
 var decoderContextTextarea = document.getElementById('decoderContext');
-var uncompressed2Textarea = document.getElementById('uncompressed2');
+var decoderOutputTextarea = document.getElementById('decoderOutput');
 
 var headerEncoder = new HeaderEncoder(REQUEST, 4);
 var headerDecoder = new HeaderDecoder(REQUEST);
@@ -74,7 +67,7 @@ var headerDecoder = new HeaderDecoder(REQUEST);
 function headerSetFromString(str) {
   var headerStrs = str.split('\n');
   return headerStrs.map(function(headerStr) {
-    var match = headerStr.match(/^(:[^:]{1,}|[^:]{1,}):[ ]*([^ ]*)[ ]*$/);
+    var match = headerStr.match(/^(:[^:]{1,}|[^:]{1,}):[ ]*(.*)[ ]*$/);
     return match ? [match[1].toLowerCase(), match[2]] : null;
   }).filter(function(e) {
     return e;
@@ -144,16 +137,26 @@ function escapeOctets(octets) {
   return str;
 }
 
-function octetsToHex(octets) {
+function octetsToHex(octets, use_spaces) {
   var str = '';
   for (var i = 0; i < octets.length; ++i) {
     var octet = octets[i];
     if (octet < 16) {
       str += '0';
     }
-    str += '' + octet.toString(16) + ' ';
+    str += '' + octet.toString(16);
+    if (use_spaces) str += ' ';
   }
   return str;
+}
+
+function hexToOctets(data) {
+  var output = []
+  for (var i = 0; i < data.length; ) {
+    output.push(parseInt(data.slice(i, i + 2), 16));
+    i += 2;
+  }
+  return output;
 }
 
 function formatCodeAsBits(code) {
@@ -199,8 +202,8 @@ function octetsToExampleString(octets) {
   while (slice_start < octets.length) {
     var octets_slice = octets.slice(slice_start, slice_start + 16);
     slice_start += 16;
-    var hex_part = octetsToHex(octets_slice);
-    var line = String(hex_part + padding).slice(0,48) + '| ';
+    var hex_part = octetsToHex(octets_slice, true);
+    var line = String(hex_part + padding).slice(0, 48) + '| ';
     for (var i = 0; i < octets_slice.length; ++i) {
       var octet = octets_slice[i];
       if (octet > 31 && octet < 127) {
@@ -215,25 +218,15 @@ function octetsToExampleString(octets) {
   return output;
 }
 
-function doRoundTrip() {
-  var input = uncompressedTextarea.value;
+function doEncode() {
+  console.log("Doing Encoding");
+  var input = encoderInputTextarea.value;
   var headerSet = headerSetFromString(input);
-
   var encodedHeaderSet = [];
-  var deserializedHeaderSet = [];
-
   var error = null;
-
   try {
     console.log("");
-    console.log("Doing Round Trip");
     encodedHeaderSet = headerEncoder.encodeHeaderSet(headerSet);
-    console.log("Encoded. Now decoding");
-
-    headerDecoder.decodeHeaderSet(encodedHeaderSet, function(name, value) {
-      deserializedHeaderSet.push([ name, value ]);
-    console.log("DONE");
-    });
   } catch (e) {
     error = {
       name: e.name,
@@ -241,44 +234,57 @@ function doRoundTrip() {
       stack: e.stack
     };
   }
-
-  var inputLength = 0;
-  for (var i = 0; i < headerSet.length; ++i) {
-    inputLength += headerSet[i][0].length;
-    inputLength += headerSet[i][1].length;
-  }
-  var encodedHeaderSetStr = escapeOctets(encodedHeaderSet);
-  var encodedHeaderSetStrAsHex = octetsToHex(encodedHeaderSet);
-  var outputLength = encodedHeaderSet.length;
-  var compressionRatio = outputLength / inputLength;
-  var headerSetsEqualValue = headerSetsEqual(headerSet, deserializedHeaderSet);
-  var contextsEqual =
-    headerEncoder.encodingContext_.equals(headerDecoder.encodingContext_);
+  // Assign to intermediate.
+  var encodedHeaderSetStr = octetsToHex(encodedHeaderSet);
+  var encodedHeaderSetStrSize = encodedHeaderSet.length;
   var intermediate = {
-    inputLength: inputLength,
     output: encodedHeaderSetStr,
-    outputAsHex: encodedHeaderSetStrAsHex,
-    outputLength: outputLength,
-    compressionRatio: compressionRatio,
-    headerSetsEqual: headerSetsEqualValue,
-    contextsEqual: contextsEqual,
+    outputLength: encodedHeaderSetStrSize,
     error: error
   };
   intermediateTextarea.textContent = JSON.stringify(intermediate, null, '  ');
-  exampleTextarea.value += octetsToExampleString(encodedHeaderSet) + '\n';
-  exampleTextarea.value += headerSetToString(deserializedHeaderSet) + '\n';
-  exampleTextarea.value += '#########################\n\n';
-  exampleTextarea.scrollTop = exampleTextarea.scrollHeight;  // scroll to bottom
-
-  uncompressedTextarea.value = headerSetToString(headerSet);
-
-  uncompressed2Textarea.value = headerSetToString(deserializedHeaderSet);
-
   encoderContextTextarea.textContent =
     JSON.stringify(headerEncoder.encodingContext_, null, '  ');
+  console.log("Encoded.");
+}
 
+function doDecode() {
+  console.log("Decoding");
+  var intermediate = JSON.parse(intermediateTextarea.textContent);
+  var encodedHeaderSet = hexToOctets(intermediate.output);
+  var error = null;
+  var deserializedHeaderSet = []; // parse from intermediate.
+
+  if (intermediate.error != null) {
+    alert("Not decoding because the intermediate had an error in it!");
+    return;
+  }
+  try {
+    headerDecoder.decodeHeaderSet(encodedHeaderSet, function(name, value) {
+      deserializedHeaderSet.push([ name, value ]);
+    });
+  } catch (e) {
+    error = {
+      name: e.name,
+      message: e.message,
+      stack: e.stack
+    };
+    alert(error.toString());
+  }
   decoderContextTextarea.textContent =
     JSON.stringify(headerDecoder.encodingContext_, null, '  ');
+  var outputHeaders = headerSetToString(deserializedHeaderSet);
+  decoderOutputTextarea.value = outputHeaders;
+  exampleTextarea.value += octetsToExampleString(encodedHeaderSet) + '\n';
+  exampleTextarea.value += outputHeaders + '\n';
+  exampleTextarea.value += '#########################\n\n';
+  exampleTextarea.scrollTop = exampleTextarea.scrollHeight;  // scroll to bottom
+  console.log("Decoded");
+}
+
+function doRoundTrip() {
+  doEncode();
+  doDecode();
 }
 
 function doChangeHeaderTableMaxSize() {
@@ -302,12 +308,23 @@ function doChangeHeaderTableMaxSize() {
 }
 
 exampleTextarea.value += "CLIENT->SERVER Direction\n";
-exampleTextarea.value += formatCodebook(CODEBOOK1);
+exampleTextarea.value += formatCodebook(CLIENT_TO_SERVER_CODEBOOK);
 exampleTextarea.value += "SERVER->CLIENT Direction\n";
-exampleTextarea.value += formatCodebook(CODEBOOK2);
+exampleTextarea.value += formatCodebook(SERVER_TO_CLIENT_CODEBOOK);
+
+function setIS_REQUEST() {
+  IS_REQUEST = isRequestCheckbox.checked;
+}
+
+function setENCODE_HUFFMAN() {
+  ENCODE_HUFFMAN = useHuffmanCheckbox.checked;
+}
 
 roundTripButton.addEventListener('click', doRoundTrip, false);
-
+encodeButton.addEventListener('click', doEncode, false);
+decodeButton.addEventListener('click', doDecode, false);
+isRequestCheckbox.addEventListener('click', setIS_REQUEST, false);
+useHuffmanCheckbox.addEventListener('click', setENCODE_HUFFMAN, false);
 changeHeaderTableMaxSizeButton.addEventListener(
   'click', doChangeHeaderTableMaxSize, false);
 </script>
