fixed integer encoding/decoding bug, added debugging output.

--- a/compressor_test.html
+++ b/compressor_test.html
@@ -16,7 +16,9 @@ Use Huffman?<input id="useHuffmanCheckbox" type="checkbox" checked=true />
 <br />
 
 <textarea id="encoderInput" cols="60" rows="20">
-:authority: www.google.com
+:authority: www.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.com
+</textarea>
+<!--
 :method: GET
 :path: /
 :scheme: https
@@ -30,6 +32,7 @@ custom-header: custom-value
 p3p:
 user-agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.32 (KHTML, like Gecko) Chrome/27.0.1425.0 Safari/537.32
 </textarea>
+-->
 
 <textarea id="decoderOutput" cols="60" rows="20"> </textarea>
 <!-- 70 = 16*3 + 2 + 16 + padding (For scrollbar)-->
