Added more debug info w.r.t. opcodes. Cleaned up handling of opcodes a bit.

--- a/compressor_test.html
+++ b/compressor_test.html
@@ -9,6 +9,7 @@
 <input id="decodeButton" type="button" value="Decode" />
 Is Request?<input id="isRequestCheckbox" type="checkbox" checked=true />
 Use Huffman?<input id="useHuffmanCheckbox" type="checkbox" checked=true />
+Use Static Table?<input id="useStaticTable" type="checkbox" checked=true />
 <input id="headerTableMaxSizeInput" type="number" min="0" value="4096" />
 <input id="changeHeaderTableMaxSizeButton" type="button"
        value="Change header table max size" />
@@ -16,9 +17,7 @@ Use Huffman?<input id="useHuffmanCheckbox" type="checkbox" checked=true />
 <br />
 
 <textarea id="encoderInput" cols="60" rows="20">
-:authority: www.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.comwww.google.com
-</textarea>
-<!--
+:authority: www.google.com
 :method: GET
 :path: /
 :scheme: https
@@ -32,7 +31,6 @@ custom-header: custom-value
 p3p:
 user-agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.32 (KHTML, like Gecko) Chrome/27.0.1425.0 Safari/537.32
 </textarea>
--->
 
 <textarea id="decoderOutput" cols="60" rows="20"> </textarea>
 <!-- 70 = 16*3 + 2 + 16 + padding (For scrollbar)-->
