Changed 'fraction' to 'percentage' to make it easier to understand what is going on w.r.t. compression size output.

--- a/compressor_test.html
+++ b/compressor_test.html
@@ -241,7 +241,7 @@ function doEncode() {
   var intermediate = {
     inputLen: input.length,
     outputLength: encodedHeaderSetStrSize,
-    compressionRatio: encodedHeaderSetStrSize / input.length,
+    PercentageOfOriginalSize: (100 * encodedHeaderSetStrSize / input.length),
     output: encodedHeaderSetStr,
     error: error
   };
